2000-11-09  Kevin Buettner  <kevinb@redhat.com>

	Changes based on a patch from Ulrich Drepper:
	* solib-svr4.c (svr4_relocate_main_executable): New function.
	(svr4_solib_create_inferior_hook):  Call
	svr4_relocate_main_executable.
	
2000-11-09  J.T. Conklin  <jtc@redback.com>

	* config/i386/nbsd.mh: Remove solib.o, solib-svr4.o from NATDEPFILES.
	* config/i386/nbsdelf.mh: Likewise.
	* config/m68k/nbsd.mh: Likewise.
	* config/ns32k/nbsd.mh: Likewise.
	* config/powerpc/nbsd.mh: Likewise.
	* config/sparc/nbsd.mh: Likewise.
	* config/sparc/nbsdelf.mh: Likewise.
	* config/i386/nbsd.mt: Add solib.o, solib-svr4.o to TDEPFILES.
	* config/i386/nbsdelf.mt: Likewise.
	* config/m68k/nbsd.mt: Likewise.
	* config/ns32k/nbsd.mt: Likewise.
	* config/powerpc/nbsd.mt: Likewise.
	* config/sparc/nbsd.mt: Likewise.

2000-11-09  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	Add auto-solib-add support for AIX, remove obsolete and unused
	SOLIB_SYMBOLS_MANUAL code, cleanup of AIX shared library handling code.
	* rs6000-nat.c (vmap_symtab):  Do not try to modify offsets
	if symbols are not yet loaded.
	(vmap_add_symbols):  New function to add symbols for a vmap entry.
	(add_vmap):  Turn errors into warnings, return NULL vmap upon
	failure. Add symbols via vmap_add_symbols only if requested.
	(xcoff_relocate_core):  Allow debugging of core files without an
	executable file. Handle NULL returns from add_vmap gracefully.
	* xcoffsolib.c (solib_add):  Remove, no longer needed.
	(solib_info):  Do not check for new shared libraries if there is no
	inferior process.
	(sharedlibrary_command):  Made static.
	Do not check for new shared libraries if there is no inferior process.
	Add symbols for requested shared libraries via vmap_add_symbols.
	(_initialize_solib):  Add `set auto-solib-add' command.
	* xcoffsolib.h (vmap_add_symbols):  Add prototype declaration.

	* config/rs6000/tm-rs6000.h (PC_LOAD_SEGMENT):  Move from here ...